style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    scroll-behavior: smooth;
}

section {
    height: 89vh;
    scroll-snap-align: start;
}

.overall {
    scroll-snap-type: y mandatory;
    overflow-y: scroll;
    height: 89vh;
}

.resume {
    background-color: #e6dc86;
}

.project {
    background-color: #8688e6;
}

.contact {
    height: 35vh;
    top: 800px;
    color: black;
    background-color: #bce686;
}


body {
    /* background: white;   */
    color:rgba(253, 252, 252, 0.89);
    background-position: center;
    font-family: "Jost", monospace;
    min-height: 100vh;
    background-size: cover;
}

.titlepage {
    font-size: 2.5rem;
    min-height: 67vh;
    width: 40vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: left;
    color: #050002;
    position: absolute;
    left: 60%;
}

.head {
    left: 20%;
}

.intro {
    font-family: 'Noto Sans', sans-serif;
    font-size: 1.2rem;
    min-height: 35vh;
    width: 85vh;
    left: 60%;
    color: #050002;
    position: absolute;
    -webkit-transform: translate(+50%,+50%);
    transform: translate(0%,+130%);
    left: 50%;
}

.paragraph {
    font-family: 'Noto Sans', sans-serif;
    position: relative;
}

nav{
    height: 11vh;
    background-color:white;
    position: sticky;
    top: 0;
    z-index: 12;
}

.nav-links {
    display: flex; /*horizontal*/
    list-style: none; /*removing the dots for the unordered lists*/
    width: 50%;
    height: 100%;
    justify-content: space-around; /*evenly distribute horizontally*/
    align-items: center; /*evemly distribute vertically*/
    margin-left: auto; /*align to left*/
    margin-right: auto; 
}

.nav-links li a {
    color:rgb(37, 37, 37);
    text-decoration: none;
}

.nav-links li a:hover {
    color:rgb(88, 88, 88);
}

.container {
    position: relative;
}

.back-block {
    background-color: #e6a386;
    height: 89vh;
    width: 40%;
    position: absolute;
    z-index: 2;
}

.top-block {
    background-color:#EDC7B7;
    position: absolute;
    z-index: 10;
    height: 50vh;
    width: 40vh;
    left: 27%;
    top: 150px;
    box-shadow: 5px 8px #d3cccf;
}

#yimengphoto {
    width: 60%;
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
    top: 10%;
}

.name, .dash, .student {
    font-size: 130%;
    position: relative;
    display: flex;
    top: 14%;
    justify-content: center;
    color: rgb(7, 0, 0);
}

.name {
    font-size: 2rem;
}
.dash {
    color: #7a7a7a;
}

span {
    display: flex; /*horizontal*/
    list-style: none; /*removing the dots for the unordered lists*/
    width: 40%;
    height: 40%;
    justify-content: space-around; /*evenly distribute horizontally*/
    align-items: center; /*evemly distribute vertically*/
    margin-left: auto; /*align to left*/
    margin-right: auto;
    color: #91604c;
    font-size: 1.3rem;  
}

i {
    color: #91604c;
}

i:hover {
    color: cadetblue;
}

.copyright {
    font-family: 'Noto Sans', sans-serif;
    position: relative;
    top: 10%;
    left: 45%;
}

@media screen and (max-width:1500px) {
    .titlepage {
        font-size: 2rem;
        min-height: 70vh;
        width: 50%;
        color: rgb(37, 37, 37);
        display: flex;
        align-items: center;
        text-align: center;
    }
    .intro {
        font-size: 1.1rem;
        min-height: 35vh;
        width: 40vh;
        left: 68%;
        text-align: center;
    }
}

@media screen and (max-width: 1000px){
    .line {
        width: 30px;
        height: 3px;
        background: black;
        margin: 5px;
    }

    nav {
        position: relative;
    }

    .hamburger {
        position: absolute;
        cursor: pointer;
        right: 3%;
        top: 50%;
        transform: translate(-5%, -50%);
        z-index: 2;
    }

    .nav-links {
        position: fixed;
        background: gray;
        height: 100vh;
        width: 100%;
        flex-direction: column;
        clip-path: circle(100px at 90% -10%);
        -webkit-clip-path: circle(100px at 90% -20%);
        transition: all 1s ease-in;
        pointer-events: none;
        z-index:1;
    }
    .nav-links.open{
        clip-path: circle(1200px at 90% -10%);
        -webkit-cli-path: circle(1200px at 90% -10%);
        pointer-events: all;
    }

    head {
        font-size: 2.5rem;
    }

    .titlepage, .intro {
        display: none;
    }
}

